# egui_tool_windows

./: CHANGELOG.md  Cargo.toml  README.md  RELEASING.md
.github/workflows/: rust.yml
demos/inside_dock/: Cargo.toml
demos/inside_dock/src/: main.rs
demos/inside_windows/: Cargo.toml
demos/inside_windows/src/: main.rs
demos/shared/: Cargo.toml
demos/shared/src/: lib.rs
demos/simple/: Cargo.toml
demos/simple/src/: main.rs
src/: lib.rs
src/tool_windows/: mod.rs
