[package]
name = "egui_tool_windows"
version = "0.1.1"
edition = "2024"
documentation = "https://docs.rs/egui_tool_windows"
repository = "https://github.com/MakerPnP/egui_tool_windows"
homepage = "https://github.com/MakerPnP/egui_tool_windows"
license = "MIT OR Apache-2.0"
authors = [
    "Dominic Clifton <me@dominicclifton.name>"
]
description = "Floating tool windows for egui that can be used in containers, like resize, scroll-area, frame, etc."
readme = "README.md"
keywords = ["egui", "gui", "widget", "floating", "windows"]
categories = ["gui"]
include = [
    "assets/**/*",
    "examples/**/*",
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
]

[features]
# enable to see layout debugging information
layout_debugging = []

[dependencies]
egui = { version = "0.31.1" }

# Logging
log = "0.4"
