[package]
name = "inside_dock"
version = "0.1.1"
edition = "2024"

[dependencies]
egui = { version = "0.31.1", features = ["callstack"] }
eframe = { version = "0.31.1"}
egui_extras = "0.31.1"
egui_dock = "0.16.0"

egui_tool_windows = { path = "../.." }
shared = { path = "../shared" }

# logging
env_logger = "0.11.8"